--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ py==1.11.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pyparsing==3.0.9
+pytest==7.1.2
+pytest-django==4.5.2
 pytz==2022.1
 sqlparse==0.4.2
 tomli==2.0.1
