--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ djangorestframework==3.13.1
 flake8==4.0.1
 iniconfig==1.1.1
 mccabe==0.6.1
+mock==4.0.3
 packaging==21.3
 pluggy==1.0.0
 psycopg2==2.9.3
@@ -14,6 +15,7 @@ pyflakes==2.4.0
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-django==4.5.2
+pytest-mock==3.7.0
 pytz==2022.1
 sqlparse==0.4.2
 tomli==2.0.1
