--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
-        run: docker-compose run --rm app sh -c "pytest -v"
+        run: docker-compose run --rm app sh -c "python manage.py wait_for_db && pytest -v"
