--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.5.2
 attrs==21.4.0
+coverage==6.4.1
 Django==4.0.5
 djangorestframework==3.13.1
 drf-spectacular==0.22.1
+execnet==1.9.0
 flake8==4.0.1
 inflection==0.5.1
 iniconfig==1.1.1
@@ -18,8 +20,12 @@ pyflakes==2.4.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
 pytest==7.1.2
+pytest-cov==3.0.0
 pytest-django==4.5.2
+pytest-forked==1.4.0
 pytest-mock==3.7.0
+pytest-randomly==3.12.0
+pytest-xdist==2.5.0
 pytz==2022.1
 PyYAML==6.0
 sqlparse==0.4.2
